// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Password/> Snapshot 1`] = `
<div>
  <h1>
    Password
  </h1>
  <p>
    Here you can set a password for the administration interface. Ensure it is secure by making it long and unique.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Password Settings
    </h2>
    <p>
      Set your password for this administration interface.
    </p>
    <form
      class="mb-3 mb-md-0"
    >
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Current password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="current-password"
            class="form-control"
            id="1"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          New password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="2"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Confirm new password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="3"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        
      </div>
      <div
        class="mb-3 form-check"
      >
        <input
          class="form-check-input"
          id="4"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="4"
        >
          Use the same password for advanced administration (root)
        </label>
        <div
          class="form-text"
        >
          <small>
            Same password would be used for accessing this administration interface, for root user in LuCI web interface and for SSH login. Use a strong password! (If you choose not to set the password for advanced configuration here, you will have the option to do so later. Until then, the root account will be blocked.)
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          disabled=""
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
    <form>
      <h3>
        Advanced Administration Password
      </h3>
      <p>
        In order to access the advanced configuration options which are not available here, you must
set the root user's password. The advanced configuration options can be managed either 
through the 
        <a
          href="%s"
          rel="noopener noreferrer"
          target="_blank"
        >
          LuCI web interface
        </a>
         or via SSH.
      </p>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="5"
        >
          New password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="5"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="6"
        >
          Confirm new password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="6"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          disabled=""
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Password/> Snapshot: same password for root 1`] = `
<div>
  <h1>
    Password
  </h1>
  <p>
    Here you can set a password for the administration interface. Ensure it is secure by making it long and unique.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Password Settings
    </h2>
    <p>
      Set your password for this administration interface.
    </p>
    <form
      class="mb-3 mb-md-0"
    >
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Current password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="current-password"
            class="form-control"
            id="1"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          New password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="2"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Confirm new password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="3"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        
      </div>
      <div
        class="mb-3 form-check"
      >
        <input
          class="form-check-input"
          id="4"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="4"
        >
          Use the same password for advanced administration (root)
        </label>
        <div
          class="form-text"
        >
          <small>
            Same password would be used for accessing this administration interface, for root user in LuCI web interface and for SSH login. Use a strong password! (If you choose not to set the password for advanced configuration here, you will have the option to do so later. Until then, the root account will be blocked.)
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          disabled=""
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Password/> Snapshot: wrong password confirmation 1`] = `
<div>
  <h1>
    Password
  </h1>
  <p>
    Here you can set a password for the administration interface. Ensure it is secure by making it long and unique.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Password Settings
    </h2>
    <p>
      Set your password for this administration interface.
    </p>
    <form
      class="mb-3 mb-md-0"
    >
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Current password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="current-password"
            class="form-control"
            id="1"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          New password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="2"
            type="password"
            value="testing"
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Confirm new password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control is-invalid"
            id="3"
            type="password"
            value="testingg"
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        <div
          class="invalid-feedback"
        >
          Passwords do not match.
        </div>
      </div>
      <div
        class="mb-3 form-check"
      >
        <input
          class="form-check-input"
          id="4"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="4"
        >
          Use the same password for advanced administration (root)
        </label>
        <div
          class="form-text"
        >
          <small>
            Same password would be used for accessing this administration interface, for root user in LuCI web interface and for SSH login. Use a strong password! (If you choose not to set the password for advanced configuration here, you will have the option to do so later. Until then, the root account will be blocked.)
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          disabled=""
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
    <form>
      <h3>
        Advanced Administration Password
      </h3>
      <p>
        In order to access the advanced configuration options which are not available here, you must
set the root user's password. The advanced configuration options can be managed either 
through the 
        <a
          href="%s"
          rel="noopener noreferrer"
          target="_blank"
        >
          LuCI web interface
        </a>
         or via SSH.
      </p>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="5"
        >
          New password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="5"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="6"
        >
          Confirm new password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="6"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          disabled=""
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Password/> Snapshot: wrong root password confirmation 1`] = `
<div>
  <h1>
    Password
  </h1>
  <p>
    Here you can set a password for the administration interface. Ensure it is secure by making it long and unique.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Password Settings
    </h2>
    <p>
      Set your password for this administration interface.
    </p>
    <form
      class="mb-3 mb-md-0"
    >
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Current password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="current-password"
            class="form-control"
            id="1"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          New password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="2"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Confirm new password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="3"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        
      </div>
      <div
        class="mb-3 form-check"
      >
        <input
          class="form-check-input"
          id="4"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="4"
        >
          Use the same password for advanced administration (root)
        </label>
        <div
          class="form-text"
        >
          <small>
            Same password would be used for accessing this administration interface, for root user in LuCI web interface and for SSH login. Use a strong password! (If you choose not to set the password for advanced configuration here, you will have the option to do so later. Until then, the root account will be blocked.)
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          disabled=""
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
    <form>
      <h3>
        Advanced Administration Password
      </h3>
      <p>
        In order to access the advanced configuration options which are not available here, you must
set the root user's password. The advanced configuration options can be managed either 
through the 
        <a
          href="%s"
          rel="noopener noreferrer"
          target="_blank"
        >
          LuCI web interface
        </a>
         or via SSH.
      </p>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="5"
        >
          New password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="5"
            type="password"
            value="testing"
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="6"
        >
          Confirm new password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control is-invalid"
            id="6"
            type="password"
            value="testingg"
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        <div
          class="invalid-feedback"
        >
          Passwords do not match.
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          disabled=""
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Customized <Password/> Snapshot 1`] = `
<div>
  <h1>
    Password
  </h1>
  <p>
    Here you can set a password for the administration interface. Ensure it is secure by making it long and unique.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Password Settings
    </h2>
    <p>
      Set your password for this administration interface.
    </p>
    <form
      class="mb-3 mb-md-0"
    >
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="1"
        >
          Current password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="current-password"
            class="form-control"
            id="1"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="2"
        >
          New password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="2"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Confirm new password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="3"
            type="password"
            value=""
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
        
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          disabled=""
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
